reports refactored untill listCreditCardOffersByCampaignCount:src/main/java/com/patika/kredinbizdenservice/model/Report.java